@@ -1,7 +1,5 @@
 package main.java.com.votingsystem.blockchain;
 
-import main.java.com.votingsystem.models.Vote;
-
 import java.util.ArrayList;
 import java.util.List;
 
@@ -13,13 +11,12 @@ public class Blockchain {
         this.chain.add(new Block("0", java.time.LocalDateTime.now().toString(), new ArrayList<>()));
     }
 
-    public void addBlock(List<Vote> votes) {
-        // new block data
-        Block previousBlock = this.chain.get(this.chain.size() - 1);
+    public void addBlock(List<String> encryptedVotes) {
+        Block previousBlock = this.chain.getLast();
         String previousHash = previousBlock.getHash();
         String timestamp = java.time.LocalDateTime.now().toString();
 
-        Block newBlock = new Block(previousHash, timestamp, votes);
+        Block newBlock = new Block(previousHash, timestamp, encryptedVotes);
         chain.add(newBlock);
     }
 
